Here's the commented version of the code:

```c++
/*
 *
 * Copyright 2024 gRPC authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

// Include necessary headers
#include <grpc/grpc.h>
#include <grpcpp/ext/proto_server_reflection_plugin.h>
#include <grpcpp/grpcpp.h>

#include <iostream>
#include <string>

#include "absl/flags/flag.h"
#include "absl/flags/parse.h"
#include "absl/log/initialize.h"

// Include the generated protobuf headers
#ifdef BAZEL_BUILD
#include "examples/protos/helloworld.grpc.pb.h"
#else
#include "helloworld.grpc.pb.h"
#endif

// Define command line flags
ABSL_FLAG(std::string, target, "localhost:50051", "Server address");
ABSL_FLAG(size_t, quota, 20,
          "Resource quota (in megabytes) that defines how much memory gRPC has "
          "available for buffers");

namespace {

// Reader class implements a client-side streaming reactor for HelloReply messages
class Reader final : public grpc::ClientReadReactor<helloworld::HelloReply> {
 public:
  // Starts the streaming read operation
  void Start() {
    StartRead(&res_);  // Initiate asynchronous read
    StartCall();       // Start the RPC call
  }

  // Blocks until the RPC call is complete and returns the final status
  grpc::Status WaitForDone() {
    absl::MutexLock lock(&mu_);
    // Wait until result_ has a value
    mu_.Await(absl::Condition(
        +[](Reader* reader) { return reader->result_.has_value(); }, this));
    return *result_;
  }

  // Callback invoked when a read operation completes
  void OnReadDone(bool ok) override {
    if (!ok) {
      // Stream ended
      std::cout << "Done reading\n";
      return;
    }
    // Print the size of received message
    std::cout << "Read " << res_.message().length() << " bytes.\n";
    res_.set_message("");  // Clear the message for next read

    sleep(1);  // Delay before next read
    StartRead(&res_);  // Initiate next asynchronous read
  }

  // Callback invoked when the RPC call is done
  void OnDone(const grpc::Status& status) override {
    absl::MutexLock lock(&mu_);
    result_ = status;  // Store the final status
  }

 private:
  absl::Mutex mu_;  // Mutex for thread-safe access to result_
  std::optional<grpc::Status> result_;  // Stores the final RPC status
  helloworld::HelloReply res_;  // Holds the current reply message
};

}  // namespace

int main(int argc, char* argv[]) {
  // Initialize command line parsing and logging
  absl::ParseCommandLine(argc, argv);
  absl::InitializeLog();

  // Set up channel arguments with resource quota
  grpc::ChannelArguments channel_arguments;
  grpc::ResourceQuota quota;
  quota.Resize(absl::GetFlag(FLAGS_quota) * 1024 * 1024);  // Convert MB to bytes
  channel_arguments.SetResourceQuota(quota);

  // Create a gRPC channel to the target server
  auto channel = grpc::CreateCustomChannel(
      absl::GetFlag(FLAGS_target),
      grpc::InsecureChannelCredentials(),
      channel_arguments);

  // Create a stub for the Greeter service
  auto greeter = helloworld::Greeter::NewStub(channel);

  // Prepare the RPC call
  grpc::ClientContext ctx;
  helloworld::HelloRequest req;
  req.set_name("World");  // Set request parameter

  // Create and start the streaming reader
  Reader reader;
  greeter->async()->SayHelloStreamReply(&ctx, &req, &reader);
  reader.Start();

  // Wait for the streaming to complete
  auto status = reader.WaitForDone();

  // Check and report final status
  if (status.ok()) {
    std::cout << "Success\n";
  } else {
    std::cerr << "Failed with error: " << status.error_message() << "\n";
  }

  return 0;
}
```

Key additions in the comments:
1. Explained the purpose of the Reader class and its methods
2. Documented the streaming flow and callbacks
3. Clarified the use of mutex for thread safety
4. Explained the command line flag usage
5. Added comments about the gRPC channel setup and resource quota
6. Documented the main execution flow
7. Added notes about important operations like StartRead, StartCall, and the async streaming

The comments provide a clear understanding of the streaming client implementation while maintaining readability of the original code.